kubernetes/templates/mongo-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo
  namespace: service-requests-api
  labels:
    app: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: main
          image: ghcr.io/uvarc/mongo:latest
          ports:
            - containerPort: 27017
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
