kubernetes/templates/mongo-express-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  namespace: service-requests-api
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      imagePullSecrets:
        - name: ghcr-regcred
      containers:
        - name: main
          image: ghcr.io/uvarc/mongo-express:latest
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
