kubernetes/templates/service-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-api
  namespace: service-requests-api
  labels:
    app: service-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-api
  template:
    metadata:
      labels:
        app: service-api
    spec:
      containers:
        - name: main
          image: ghcr.io/uvarc/service-api:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
