kubernetes/templates/service-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-api
  namespace: service-requests-api
spec:
  selector:
    app: service-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
