kubernetes/templates/services-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: services-web
  namespace: service-requests-api
spec:
  selector:
    app: services-web
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
